--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -268,6 +268,16 @@ Distinguished from chart visualization, glyph visualization refers to the target
 %体可视化是指对物体进行三维地呈现。制造业中可以通过CT对物体进行扫描成像，也可以通过图像数据生成三维数字仿真。
 Volume visualization can be described as the three-dimensional rendering of objects. In manufacturing, objects can be scanned and imaged by CT, or 3D digital simulations can be generated from image data.
 
+\begin{figure*}
+	\centering
+	\includegraphics[width=\textwidth]{Images/imageandvideo2.png}
+	\vspace{-4em}
+	\caption{imageandvideo2}
+	\label{fig:imageandvideo2}
+	\vspace{-2em}
+\end{figure*}
+
+
 %交互分析方法
 \raisebox{-0.4mm}{\includegraphics[scale=0.25]{Images/purple.png}}
 \textbf{Interactive analysis methods}. 
@@ -341,7 +351,14 @@ At the same time, the rise of artificial intelligence and machine learning in re
 %而虚拟现实和增强现实的发展，使得分析数据从二维扩展到三维，同时增加了新的可视化展示和交互分析方法。
 And the development of virtual reality and augmented reality has expanded the analysis of data from two-dimensional to three-dimensional, while adding new visual displays and interactive analysis methods.
 
-
+\begin{figure*}
+	\centering
+	\includegraphics[width=\textwidth]{Images/imageandvideo.png}
+	\vspace{-4em}
+	\caption{imageandvideo}
+	\label{fig:imageandvideo}
+	\vspace{-2em}
+\end{figure*}
 
 %   可视化技术
 \subsection{Visualization Techniques}
@@ -404,22 +421,6 @@ The application of visualization in industrial production is facilitated by inte
 % 为了减少成本，增加趣味性，方便展开职工培训，研究人员根据生产数据和行业安全手册开发了特定行业的安全培训互动模拟器。同时，也有研究人员对增强现实在人员装配培训的应用进行了论证。
 To reduce costs, increase interest and facilitate the rollout of employee training, researchers have developed industry-specific interactive simulators for safety training based on production data and industry safety manuals~\cite{Moreland2019}. Meanwhile, some researchers have also discussed whether the usage of AR in personnel assembly training is justified~\cite{buttner2020augmented}.
 
-\begin{figure*}
-	\centering
-	\subfigure[the first subfigure]{
-		\begin{minipage}[b]{0.2\textwidth}
-			\includegraphics[width=1\textwidth]{Images/Nodefect.png}
-		\end{minipage}
-	}
-	\subfigure[the second subfigure]{
-		\begin{minipage}[b]{0.2\textwidth}
-			\includegraphics[width=1\textwidth]{Images/Bentstrut.png}
-		\end{minipage}
-	}
-	\caption{Defect Detection}
-	\label{fig:hor_2figs_1cap_2subcap}
-	\vspace{-2em}
-\end{figure*}
 
 
 %   讨论
