complete fig caption

--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -268,15 +268,6 @@ Distinguished from chart visualization, glyph visualization refers to the target
 %体可视化是指对物体进行三维地呈现。制造业中可以通过CT对物体进行扫描成像，也可以通过图像数据生成三维数字仿真。
 Volume visualization can be described as the three-dimensional rendering of objects. In manufacturing, objects can be scanned and imaged by CT, or 3D digital simulations can be generated from image data.
 
-\begin{figure*}[h]
-	\centering
-	\includegraphics[width=\textwidth]{Images/imageandvideo2.png}
-	\vspace{-4em}
-	\caption{imageandvideo2}
-	\label{fig:imageandvideo2}
-	\vspace{-2em}
-\end{figure*}
-
 
 %交互分析方法
 \raisebox{-0.4mm}{\includegraphics[scale=0.25]{Images/purple.png}}
@@ -304,6 +295,8 @@ According to the actual production needs of the manufacturing industry, we class
 \section{Tabular Text Data}
 %在本节，我们将针对制造业中的表格文本数据进行讨论。
 In this section, we will discuss for tabular text data in manufacturing processes.
+%表格文本数据是制造业中最常见的数据类型之一。本节讨论的表格文本数据包含了结构化数据和非结构化数据。
+Tabular text data is one of the most common types of data in manufacturing. The tabular text data discussed in this section contains both structured and unstructured data.
 
 %   可视化技术
 \subsection{Visualization Techniques}
@@ -355,7 +348,8 @@ And the development of virtual reality and augmented reality has expanded the an
 	\centering
 	\includegraphics[width=\textwidth]{Images/imageandvideo.png}
 	\vspace{-4em}
-	\caption{imageandvideo}
+	%图像和视频数据应用于缺陷检测的研究。
+	\caption{Researches on the application of image and video data for defect detection.(1) Check the equipment installation with 3D scanning. (2) Detection of the machining accuracy of PCB holes. (3) Markerless cooperative augmented reality-based intelligent manufacturing review system. (4) Volume visualization of the physical structure of additively manufactured parts, including one normal case (far left) and five abnormal cases.}
 	\label{fig:imageandvideo}
 	\vspace{-2em}
 \end{figure*}
@@ -424,6 +418,17 @@ The application of visualization in industrial production is facilitated by inte
 In education \& training, to reduce costs, increase interest and facilitate the roll-out of employee training, researchers developed industry-specific interactive safety training simulators based on production data and industry safety manuals~\cite{Moreland2019}. Meanwhile, some researchers have also discussed whether the usage of AR in personnel assembly training is justified~\cite{buttner2020augmented}.
 %在工业生产中，增强现实辅助操作员了解设备参数。
 In industrial production, AR assist operators in understanding equipment parameters~\cite{Murithi2020,Satkowski2021}.
+
+\begin{figure*}[h]
+	\centering
+	\includegraphics[width=\textwidth]{Images/imageandvideo2.png}
+	\vspace{-4em}
+	%增强现实和虚拟现实在制造业中的应用。
+	\caption{Augmented reality and virtual reality in manufacturing. (1) Assisted industrial assembly training with a projection-based AR system. (2) Virtual reality applications in manufacturing systems. (3) Interactive simulator for steel industry safety training. (4) Augmented reality that uses the real factory environment as a background to display equipment information.}
+	\label{fig:imageandvideo2}
+	\vspace{-2em}
+\end{figure*}
+
 
 %   讨论
 \subsection{Discussion}
