修改了bib和图片[h]的报错

--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -419,7 +419,7 @@ In education \& training, to reduce costs, increase interest and facilitate the 
 %在工业生产中，增强现实辅助操作员了解设备参数。
 In industrial production, AR assist operators in understanding equipment parameters~\cite{Murithi2020,Satkowski2021}.
 
-\begin{figure*}[h]
+\begin{figure*}[pos=h]
 	\centering
 	\includegraphics[width=\textwidth]{Images/imageandvideo2.png}
 	\vspace{-4em}
