--- a/chinavis2022_survey/multimedia.bib
+++ b/chinavis2022_survey/multimedia.bib
@@ -163,7 +163,7 @@ year = {2021}
 @inproceedings{Liu2021,
 author = {Liu, Can and Han, Yun and Jiang, Ruike and Yuan, Xiaoru},
 pages = {11--20},
-booktitle= {Proceedings of IEEE Pacific Visualization Symposium}
+booktitle= {Proceedings of IEEE Pacific Visualization Symposium},
 title = {ADVISor : Automatic visualization answer for natural-language question on tabular data},
 year = {2021}
 }
@@ -254,7 +254,7 @@ volume = {59},
 year = {2021}
 }
 @inproceedings{buttner2020augmented,
-title={Augmented Reality Training for Industrial Assembly Work-Are Projection-based AR Assistive Systems an Appropriate Tool for Assembly Training?},
+title={{Augmented Reality Training for Industrial Assembly Work-Are Projection-based AR Assistive Systems an Appropriate Tool for Assembly Training?}},
 author={B{\"u}ttner, Sebastian and Prilla, Michael and R{\"o}cker, Carsten},
 booktitle={Proceedings of the 2020 CHI conference on human factors in computing systems},
 pages={1--12},
@@ -280,7 +280,7 @@ year = {2012}
 @inproceedings{Emelyanova,
 author = {Emelyanova, Yulia and Khachumov, Vyacheslav},
 booktitle= {Proceedings of IEEE International Conference on Progress in Informatics and Computing},
-title = {Cognitive images for the visual analysis of the states of complex objects in relation to the space industry}
+title = {Cognitive images for the visual analysis of the states of complex objects in relation to the space industry},
 pages = {219--225},
 year = {2020}
 }
@@ -288,7 +288,7 @@ year = {2020}
 author = {Datta, Srayan and Adar, Eytan},
 number = {1},
 pages = {1--34},
-title = {CommunityDiff: Visualizing community clustering algorithms},
+title = {{CommunityDiff: Visualizing community clustering algorithms}},
 journal = {ACM Transactions on Knowledge Discovery from Data},
 volume = {12},
 year = {2018}
@@ -345,7 +345,7 @@ year = {2013}
 author = {Wang, Yun and Sun, Zhida and Zhang, Haidong and Cui, Weiwei and Xu, Ke and Ma, Xiaojuan and Zhang, Dongmei},
 title = {DataShot : Automatic generation of fact sheets from tabular data},
 journal = {IEEE Transactions on Visualization and Computer Graphics}, 
-year = {2019}
+year = {2019},
 volume = {26},
 number = {1},
 pages = {895--905}
@@ -354,7 +354,7 @@ pages = {895--905}
 author = {Zhang, Jianjing and Gao, Robert X},
 journal = {Chinese Journal of Mechanical Engineering},
 title = {Deep Learning - Driven data curation and model interpretation for smart manufacturing},
-year = {2021}
+year = {2021},
 volume = {34},
 number = {1},
 pages = {1--21},
@@ -702,7 +702,7 @@ year = {2022}
 author = {Cibulski, Lena and Schmidt, Johanna},
 pages = {21--32},
 title = {Reflections on visualization research projects in the manufacturing industry},
-year = {2022}
+year = {2022},
 journal={IEEE Computer Graphics and Applications}, 
 volume={42},
 number={2},
@@ -938,7 +938,7 @@ year={2014},
 @article{Wang2022,
 author = {Wang, Lei and Sun, Guodao and Wang, Yunchao and Ma, Ji and Zhao, Xiaomin and Liang, Ronghua},
 pages = {47--55},
-journal = {Visual Informatics}
+journal = {Visual Informatics},
 title = {AFExplorer: Visual analysis and interactive selection of audio features},
 volume = {6},
 year = {2022}
