--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -317,7 +317,16 @@ In this section, we will discuss for signal sensing data in manufacturing proces
 
 %   可视化技术
 \subsection{Visualization Techniques}
-
+%体可视化常被研发人员用来设计制造产品和仿真模拟。
+Volume visualization is frequently utilized by developers to design products and perform simulations.
+%Suzuki等人选择体积可视化来显示结构中的载荷路径，并将纤维与载荷路径的方向对齐。
+Suzuki et al. \cite{Suzuki2020} chose volume visualization to display a load path in the composite material structure and aligned fiber with the direction of load path.
+%Matthew等人介绍了一种处理来自温度传感器的高密度数据的方法，并使用三维可视化来显示连续钢坯铸造过程中模具区域的热流体流场。
+Matthew et al. \cite{Zappulla2019} introduced a methodology for the processing of high-density data from temperature sensors and used 3D visualization of thermal fluid flow fields in mold region during continuous steel-slab casting.
+%Huettenberger使用光学测量产生的数据，将汽车部件上的系统误差区域可视化，以实现自动检测。
+Huettenberger et al. \cite{Huettenberger2015} used the data produced by optical measurements to visualize the areas of systematic errors on auto parts in order to achieve automatic detection.
+%Dutta等人开发了基于GMM数据的可视化技术，使用表面渲染和不确定的等值线来检测跨音速喷气发动机失速的早期迹象。
+Dutta et al. \cite{dutta2016situ} developed the tech of visualization of GMM based data using surface renderings and uncertain isocontours to detect the early signs of transonic jet engine stall.
 %   交互分析手段
 \subsection{Interactive Analysis Methods}
 
