--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -314,9 +314,24 @@ Tabular text data is one of the most common types of data in manufacturing. The 
 \section{Signal Sensing Data}
 %在本节，我们将针对制造业中传感信号数据进行讨论。
 In this section, we will discuss for signal sensing data in manufacturing processes.
+%在工业生产中，各式各样的传感器被用于采集机械设备，流水线和生产产品的信息。
+A wide variety of sensors are used in manufacturing production to collect data from mechanical equipment, manufacturing lines, and manufactured products.
+%这些传感器记录了设备的各种数据，如:温度，湿度，压力，流量，速度，位置等。
+These sensors record various data of the equipment, such as: temperature, humidity, pressure, flow, speed, position, etc.
 
 %   可视化技术
 \subsection{Visualization Techniques}
+%序列可视化在传感信号数据中非常普遍。
+Sequence visualization is highly prevalent in sensing signal data.
+%Zhao等人提出了一种利用大规模长期耐久性试验数据的可视化分析方法，来研究汽车起动机耐久性的关键因素。
+Zhao et al. \cite{zhao2019visual} proposed a visual analysis method using large-scale and long-term durability test data to  investigate the key factor of the durability of automotive starters.
+
+
+%Kagaya等人开发了一种技术，使用运动传感器来记录预防性维修期间工人动作的时序三维坐标数据，以便提取高质量维修工作的重要迹象。
+Kagaya et al. \cite{Kagaya2017} developed a technique using a motion sensor to record time-series 3-D coordinate data of a worker's motions during preventative maintenance in order to extract important indications of high-quality maintenance work.
+
+
+
 %体可视化常被研发人员用来设计制造产品和仿真模拟。
 Volume visualization is frequently utilized by developers to design products and perform simulations.
 %Suzuki等人选择体积可视化来显示结构中的载荷路径，并将纤维与载荷路径的方向对齐。
