--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -325,11 +325,10 @@ These sensors record various data of the equipment, such as: temperature, humidi
 Sequence visualization is highly prevalent in sensing signal data.
 %Zhao等人提出了一种利用大规模长期耐久性试验数据的可视化分析方法，来研究汽车起动机耐久性的关键因素。
 Zhao et al. \cite{zhao2019visual} proposed a visual analysis method using large-scale and long-term durability test data to  investigate the key factor of the durability of automotive starters.
-
-
+%基于不同传感器记录的发动机转速、发动机扭矩、温度、压力和废气测量数据，提出了一种灵活、可扩展的发动机异常检测可视化分析方法。
+Based on engine speed, engine torque, temperatures, pressures and exhaust gas measures data recorded by varied sensors, we present a flexible and expandable visual analytics approach for anomaly detection on engine.
 %Kagaya等人开发了一种技术，使用运动传感器来记录预防性维修期间工人动作的时序三维坐标数据，以便提取高质量维修工作的重要迹象。
 Kagaya et al. \cite{Kagaya2017} developed a technique using a motion sensor to record time-series 3-D coordinate data of a worker's motions during preventative maintenance in order to extract important indications of high-quality maintenance work.
-
 
 
 %体可视化常被研发人员用来设计制造产品和仿真模拟。
