--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -330,6 +330,18 @@ Based on engine speed, engine torque, temperatures, pressures and exhaust gas me
 %Kagaya等人开发了一种技术，使用运动传感器来记录预防性维修期间工人动作的时序三维坐标数据，以便提取高质量维修工作的重要迹象。
 Kagaya et al. \cite{Kagaya2017} developed a technique using a motion sensor to record time-series 3-D coordinate data of a worker's motions during preventative maintenance in order to extract important indications of high-quality maintenance work.
 
+%图表可视化通常用于分析不同类型的信号传感数据，完成可视化分析任务。
+Chart visualization is commonly employed to analyze different types of signal sensing data and complete visual analysis tasks.
+%zhou等人设计了一个信息丰富的视觉分析系统，以实现复杂的关键制造设施辊道窑的常规监视和故障排除。
+Zhou et al. \cite{Zhou2018} designed an informative visual analysis system to achieve the routine monitoring and troubleshooting of the complex key manufacturing facility Roller Hearth Kiln.
+%Wang等人开发了带有节点链接图和详细数据视图的AFExplorer，以探索音频特征子集。
+Wang et al. \cite{Wang2022} developed the AFExplorer with node-link diagram and detailed data view to explore the audio feature subset.
+%IRVINE使用声学数据来检测和理解电气发动机制造中以前未知的错误。
+IRVINE \cite{eirich2021irvine} used acoustic data to detect and understand previously unknown errors in the manufacturing of electrical engines.
+% PAVED提供了一种交互式平行坐标可视化方法，以帮助工程师探索具有众多参数和标准的设计方案。
+PAVED \cite{cibulski2020paved} provided an interactive parallel coordinates visualization to assist engineers to explore design alternatives, which are characterized by numerous parameters and criteria.
+%SafetyLens是一个可视化的数据分析工具，结合了网络和集群探索技术，帮助工程师分析汽车功能安全数据集。
+SafetyLens, \cite{narechania2020safetylens}a visual data analysis tool, which combined network and cluster exploration techniques to help engineers in analyzing automotive Functional Safety datasets.
 
 %体可视化常被研发人员用来设计制造产品和仿真模拟。
 Volume visualization is frequently utilized by developers to design products and perform simulations.
