--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -368,7 +368,7 @@ Chen et al.~\cite{chen2017sequence} used triangle glyphs to encode the number of
 %交互分析手段能减少表格文本数据体量大、维度高、关系复杂所带来的挑战。
 Interactive analysis methods reduce the challenges posed by the large volume, high dimensionality and complex relationships of tabular text data.
 %追踪和监控可以让用户在高度集成或者信息隐藏的可视化分析系统中追踪重要的信息。LiveGantt利用悬停的方式展示详细信息。Meyert等人通过框选显示存储过程的详细信息。
-Tracking and monitoring allows users to track important information in a highly integrated or information-hidden visual analytics system.
+Tracking \& monitoring allows users to track important information in a highly integrated or information-hidden visual analytics system.
 LiveGantt~\cite{Jo2014} displays detailed information via mouse hover. Meyer et al.~\cite{Meyer2013} displayed the details of the stored procedure by brushing the target node.
 %探索和导航提供了用户改变可视化视图。PlanningVis利用选择列表的下拉和上滚选择目标数据集。
 Exploration and navigation provides users access to change visualization view. PlanningVis~\cite{sun2019planningvis} used drop-down and roll-up of list to select target dataset.
@@ -448,6 +448,14 @@ Huettenberger et al. \cite{Huettenberger2015} used the data produced by optical 
 Dutta et al. \cite{dutta2016situ} developed the tech of visualization of GMM based data using surface renderings and uncertain isocontours to detect the early signs of transonic jet engine stall.
 %   交互分析手段
 \subsection{Interactive Analysis Methods}
+% 交互式分析方法使研究人员挖掘传感信号数据的隐藏模式和价值信息。
+Interactive analysis methods assist researchers in uncovering hidden patterns and worthwhile information in signal sensing data.
+%研究人员设计的原型系统提供了一套操作，帮助用户实现交互式数据探索。
+The prototype systems \cite{eirich2021irvine, narechania2020safetylens, suschnigg2020exploration, Zhou2018, zhao2019visual}designed by researchers provide a set of operations to assist users achieve interactive data exploration. 
+%跟踪和监控帮助用户进行流畅的数据探索。
+Tracking \& monitoring assist users in carrying out fluent data exploration.
+%zhao等人在许多视图和面板中提供交互。当用户在每个视图中移动或点击鼠标时，将显示详细信息。为进一步的观察和分析提供了多视图显示模式。
+Zhao et al. \cite{zhao2019visual} provided interaction in many views and panels. When users move or click the mouse in each view, detailed information will displayed. In addition, they provided a multiple-view display mode for further observation and analysis. 
 
 %   应用领域
 \subsection{Application Areas}
@@ -540,7 +548,7 @@ Analysts label high and low quality results and optimize the search results in P
 \end{figure*}
 
 %   应用领域
-\subsection{Application Areas}Townsend2022
+\subsection{Application Areas}
 % 图像和视频数据贯穿了整个制造业流程。将虚拟现实和增强现实技术与图像和视频数据相结合，促进了可视化和可视分析在工业生产中的应用。
 Image and video data exist throughout the manufacturing process. The application of visualization in industrial production is facilitated by integrating VR and AR technologies with image and video data~\cite{hamid2014virtual,Satkowski2021}. 
 % 在分析反馈中，通过对图像和视频数据的可视分析，研究人员发现产品缺陷，验证加工工艺，检查设备安装。
